[package]
name = "pollenparty"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.4"
chrono = { version = "0.4.37", features = ["unstable-locales"] }
chrono-tz = "0.9.0"
maud = { version = "0.26.0", features = ["axum"] }
ndarray = "0.15.6"
netcdf = { version = "0.9.1", features = ["static"] }
nominatim = "0.3.5"
proj4rs = "0.1.2"
reqwest = "0.12.2"
reverse_geocoder = "4.1.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.117"
shuttle-axum = "0.44.0"
shuttle-runtime = "0.44.0"
tokio = "1.28.2"
tower-http = { version = "0.5.2", features = ["fs"] }
tzf-rs = "0.4.7"
