[package]
name = "pollenparty"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.4"
chrono = { version = "0.4.41", features = ["unstable-locales"] }
chrono-tz = "0.10.3"
maud = { version = "0.27.0", features = ["axum"] }
ndarray = "0.16.1"
netcdf = { version = "0.11.0", features = ["static"] }
nominatim = "0.3.5"
proj4rs = "0.1.8"
reqwest = "0.12.22"
reverse_geocoder = "4.1.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
shuttle-axum = "0.56.0"
shuttle-runtime = "0.56.0"
tokio = "1.46.1"
tower-http = { version = "0.6.6", features = ["fs"] }
tzf-rs = "1.0.0"

[build]
assets = [
  "assets/*",
]
